# guitar

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  docker-compose.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  software_requirements.md  tsconfig.node.json  vitest.config.ts
.github/workflows/: ci.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: __init__.py  api.py  coaching.py  config.py  database.py  main.py  models.py  practice_score.py  queue.py  schemas.py  storage.py  worker.py
apps/backend/app/chord_detection/: __init__.py  solitito.py  solitito_assets.py
apps/backend/app/evals/: __init__.py
apps/backend/app/evals/chord_detection/: __init__.py  catalog.py  cli.py  config.py  datasets.py  dsp.py  evaluator.py  hashing.py  label_map.py  metrics.py  report.py  wcsr.py
apps/backend/tests/: test_api.py  test_chord_eval_python.py  test_worker.py
apps/frontend/: Dockerfile  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.eval.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: README.md  architecture.md  software_requirements.md  stack.md  system_diagram.md
docs/plans/: chord-detection-improvement-plan.md
infra/localstack/: init-sqs.sh
public/: analyzer.worklet.js
src/: vite-env.d.ts
src/app/: App.tsx
src/audio/: engine.ts  events.ts  useAudioEngine.ts
src/data/: progressions.ts
src/lib/: assert.ts  events.test.ts  events.ts
src/storage/: db.ts  settings-store.ts
src/ui/: Fretboard.tsx  clsx.ts
tests/e2e/: navigation.spec.ts
tests/unit/: setup.ts
(+158 files in other folders)
