[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-backend"
version = "0.1.0"
description = "FastAPI backend and analysis worker for Guitar Coach."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
eval = [
  "numpy>=2.0.0",
  "scipy>=1.14.0",
]
dev = [
  "httpx>=0.27.0",
  "numpy>=2.0.0",
  "pytest>=8.3.0",
  "scipy>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
